flex-wrap and corrections to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,7 +521,7 @@ justify-content: flex-start;
 .gallery {
 
     /*dimensions*/
-    width: 85vw;
+    width: 85%;
     margin: auto;
     overflow: hidden;
 
@@ -557,7 +557,7 @@ justify-content: flex-start;
 .gallery .gallery-item img {
 
     /*dimensions*/
-    width:100%;
+    width:200px%;
 }
 
 @keyframes scroll {
@@ -593,7 +593,7 @@ footer {
     /*text*/
     color: var(--clr-shadows);
     text-align: center;
-    font-size: 0.75rem;
+    font-size: 0.85rem;
 
 }
 
@@ -604,6 +604,7 @@ footer {
 
     /*flex-box*/
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: stretch;
 }
@@ -619,7 +620,10 @@ footer {
 
     /*text*/
     line-height: 1.4;
-    text-align: left;
+    text-align: center;
+
+    /*animation*/
+    transition: 0.3s ease-in-out;
 
 }
 
@@ -632,7 +636,13 @@ footer {
     font-size: 1.2rem;
     font-weight: bold;
     text-decoration: underline;
-    text-align: center;
+}
+
+.address:hover {
+
+    /*animation*/
+    color:var(--clr-highlights);
+    transform: scale(1.2);
 }
 
 .address a{
@@ -642,12 +652,6 @@ footer {
     color: inherit;
 }
 
-.address:hover {
-
-    /*animation*/
-    color:var(--clr-highlights);
-    transform: scale(1.2);
-}
 .socials {
 
     /*dimensions*/
@@ -657,19 +661,17 @@ footer {
     display:flex;
     flex-direction: column;
 
-
-    /*animation*/
-    transition: 0.3s ease-in-out;
 }
 
 .social-media-links {
 
+    /*dimensions*/
+    width: 100%;
+
     /*flex-box*/
     display: flex;
-    flex-wrap: 1;
     justify-content: center;
     gap:1rem;
-    font-size: 4 rem;
 
 }
 
@@ -678,14 +680,15 @@ footer {
     /*text*/
     color: var(--clr-shadows);
     transition: 0.3s;
-    
+    font-size: 1.75rem;
+
 }
 
 .social-media-links i:hover {
     
     /*animation*/
     color: var(--clr-highlights);
-    transform: scale(2);
+    transform: scale(1.4);
 }
 
 .shortcuts ul {
@@ -700,6 +703,11 @@ footer {
 
 }
 
+.shortcuts li {
+
+    transition: 0.3s ease-in-out;
+}
+
 .shortcuts a {
 
     /*dimensions*/
@@ -708,14 +716,14 @@ footer {
     /*text*/
     text-decoration: none;
     color: inherit;
+
 }
 
-.shortcuts a:hover {
+.shortcuts li:hover {
 
     /*animation*/
-    color: var(--clr-main);
-    font-size: 150%;
-    transition: 0.3s;
+    color: var(--clr-highlights);
+    transform: scale(1.4);
 }
 .disclaimer {
 
